# learning_trees

./: .gitignore  README.md  flake.nix  profile.sh  pyproject.toml  shell.nix
data/: data.txt
src/learning_trees/: classification.py  classification_pandas.py  decision_tree_classification.py  decision_tree_regression.py  random_forest.py  regression.py
src/test/: plot_regression_tree.py  pytest_regression_tree.py  test.py  test_regression_tree.py  test_regression_tree_pytest.py  test_sklearn_datasets.py
