[tool.poetry]
name = "learning-trees"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
scikit-learn = "^1.4.1.post1"
graphviz = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
